feat: add durable tailoring jobs (#176)
Refs #71
